# MiceBrainMriSegmentation

./: .gitignore  MANIFEST.in  Makefile  README(RUS).md  README.ipynb  README.md  conda_env.yml  instructions.ipynb  pyproject.toml  requirements.txt  test.out  tmp.txt
BrainS/: __config.py  __init__.py  _version.py  interface_list.py  prelude.py  protocols.py
BrainS/lib/: _read_analyze75.py  config.py  config_utils.py  filesystem.py  functional.py  io_utils.py  iterators.py  math.py  trees.py
BrainS/pipelines/: _ontology.py  (+4 more)
MBS/: __init__.py  prelude.py
example/: example.ipynb
imagej_scripts/: brain_segmentation_with_imagej.txt
ipynb/: example.ipynb
legacy/: README.md
lib/: __init__.py  default_config.yml  ontology.py  ontology_old.py  pattern_utils.py  project_ops.py  segmentation_by_atlas.py  segmentation_results_postprocessing.py  transform_utils.py
new_scripts/: README.ipynb  collect_metadata.py  connectivity_search.py  create_project.py  crop_images.py  make_batches.py  partial_segm.py  prep_console.bat  reference_selection.py  segmentation_and_summary.py  train_loc_net.py
nn_lib/: dataset_preparation.py  prepare_unet_dataset.py  superglue_glue.py  superglue_main.py  superglue_my_draft.py  superglue_point.py  train_unet.py  unet.py
scripts/: brain_segmentation_with_imagej.txt  compose_metadata_crop_images.py  images_to_npy.py  kinetic_summary.py  list_raw_images.py  new_masks_folder.py  new_project.py  plot_segmentation_summary.py  prerender_masks.py  segmentation.py
tests/: io.py  iterators.py  math.py  trees.py
v2/: README.md  conda_env.yml
(+77 files in other folders)
